--- a/index.html
+++ b/index.html
@@ -448,7 +448,7 @@
                   <span class="text-2xl">Name Of Company :</span> Nabatat Contracting Company Saudi Arabia
                   <br>
         
-                  <span class="text-2xl">Name Of Company :</span> Nabatat Contracting Company Saudi Arabia
+                  <span>Name Of Company :</span> Nabatat Contracting Company Saudi Arabia
                   <br>
         
                   <span class="text-2xl">Name Of Company :</span> Nabatat Contracting Company Saudi Arabia
