--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
 
 
           <div class="p-10">
-            <!-- <img src="./assets/images/gulp.png" alt=""> -->
+            <img src="./assets/images/gulp.png" alt="">
           </div>
 
 
@@ -218,7 +218,7 @@
       <section class="about" id="about">
 
         <figure class="about-banner">
-          <!-- <img src="./assets/images/prrrrrrr.jpg" alt="A man in a alice blue shirt with a thinking expression" -->
+          <img src="./assets/images/prrrrrrr.jpg" alt="A man in a alice blue shirt with a thinking expression"
             class="w-100">
         </figure>
 
