--- a/index.html
+++ b/index.html
@@ -539,10 +539,10 @@
 
           <p class="section-subtitle">Contact</p>
 
-          <h2 class="h3 section-title">Have You Any Project? Please Drop a Message</h2>
+          <h2 class="h3 section-title">If You Want To Contact With Me</h2>
 
           <p class="section-text">
-            Get in touch and let me know how i can help. Fill out the form and i’ll be in touch as soon as possible.
+            Get in touch and let me know how i can help. 
           </p>
 
           <ul class="contact-list">
@@ -557,7 +557,7 @@
                 <h3 class="h4 contact-item-title">Address:</h3>
 
                 <address class="contact-info">
-                  941 Saqrqorish Road, alandalos, grnata, wa 47122-4194
+                  7556 Dammam, Saudi 3998
                 </address>
               </div>
 
@@ -572,9 +572,9 @@
               <div class="wrapper">
                 <h3 class="h4 contact-item-title">Phone:</h3>
 
-                <a href="tel:01234567789" class="contact-info">(01) 234 567 789</a>
+                <a href="tel:01234567789" class="contact-info">00966550598213</a>
 
-                <a href="tel:09765432200" class="contact-info">(09) 765 432 200</a>
+                <a href="tel:09765432200" class="contact-info">(09) </a>
               </div>
 
             </li>
@@ -588,7 +588,7 @@
               <div class="wrapper">
                 <h3 class="h4 contact-item-title">Email:</h3>
 
-                <a href="mailto:info@jack.com" class="contact-info">info@jack.com</a>
+                <a href="mailto:info@jack.com" class="contact-info">gashrafahadi@gmail.com.com</a>
 
                 <a href="mailto:support@jack.com" class="contact-info">support@jack.com</a>
               </div>
@@ -615,7 +615,7 @@
                 </li>
 
                 <li>
-                  <a href="#" class="contact-social-link">
+                  <a href="https://www.linkedin.com/in/ashraf-hadi-bics-iosh-pest-control-license-from-dubai-7ab1b588/" class="contact-social-link">
                     <div class="tooltip">Linkedin</div>
 
                     <ion-icon name="logo-linkedin"></ion-icon>
@@ -719,12 +719,12 @@
 
       <p class="h1 logo">
         <a href="#">
-          <span>.</span>
+          <span class="">..M..</span>
         </a>
       </p>
 
       <p class="copyright">
-        &copy; 2022 <a href="#">codewithsadee</a>. All rights reserved
+        &copy; 2024 <a href="#">codewithsadee</a>. All rights reserved
       </p>
 
     </div>
