--- a/index.html
+++ b/index.html
@@ -308,7 +308,7 @@
 
             <li>
               <div class="skill-card">
-                <div class="tooltip">Agricultural sciences bachelor degree cairo egypt</div>
+                <div class="tooltip">Agricultural sciences bachelor degree cairo egypt 1988</div>
 
                 <div class="card-icon">
                   <img class="w-auto" src="./assets/images/univercity.jpeg" alt="Adobe XD logo">
