--- a/index.html
+++ b/index.html
@@ -574,7 +574,7 @@
 
                 <a href="tel:01234567789" class="contact-info">00966550598213</a>
 
-                <a href="tel:09765432200" class="contact-info">(09) </a>
+                <a href="tel:09765432200" class="contact-info">--------- </a>
               </div>
 
             </li>
@@ -590,7 +590,7 @@
 
                 <a href="mailto:info@jack.com" class="contact-info">gashrafahadi@gmail.com.com</a>
 
-                <a href="mailto:support@jack.com" class="contact-info">support@jack.com</a>
+                <a href="mailto:support@jack.com" class="contact-info">----------</a>
               </div>
 
             </li>
@@ -645,7 +645,7 @@
 
             <div class="input-wrapper">
 
-              <input type="text" name="name" id="name" required placeholder="e.g John Doe" class="input-field">
+              <input type="text" name="name" id="name" required placeholder="Your Name" class="input-field">
 
               <ion-icon name="person-circle"></ion-icon>
 
@@ -659,7 +659,7 @@
 
             <div class="input-wrapper">
 
-              <input type="email" name="email" id="email" required placeholder="e.g johndoe@mail.com"
+              <input type="email" name="email" id="email" required placeholder="Enter You Email"
                 class="input-field">
 
               <ion-icon name="mail"></ion-icon>
