--- a/index.html
+++ b/index.html
@@ -623,11 +623,11 @@
                 </li>
 
                 <li>
-                  <a href="#" class="contact-social-link">
+                  <!-- <a href="#" class="contact-social-link">
                     <div class="tooltip">Youtube</div>
 
                     <ion-icon name="logo-youtube"></ion-icon>
-                  </a>
+                  </a> -->
                 </li>
 
               </ul>
