--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     <div class="container">
 
       <h1 class="h1 logo">
-        <a href="#">Ashraf Ahmed<span>.</span></a>
+        <a href="#">Ashraf Hadi<span>.</span></a>
       </h1>
 
       <div class="navbar-actions">
@@ -106,8 +106,8 @@
         <figure class="hero-banner">
 
 
-          <div class="p-10">
-            <img src="./assets/images/gulp.png" alt="">
+          <div class="w-100%">
+            <img src="./assets/images/Profile.jpg" alt="">
           </div>
 
 
@@ -115,7 +115,7 @@
 
         <div class="hero-content">
 
-          <h2 class="h2 hero-title"> Ashraf Ahmed Abdel Hadi</h2>
+          <h2 class="h2 hero-title"> Ashraf Hadi</h2>
 
           <a href="#contact" class="btn btn-primary">Get in touch</a>
 
@@ -169,7 +169,7 @@
               </div>
 
               <h2 class="h2 card-title">
-                8+ <strong>Years of Experience</strong>
+                25+ <strong>Years of Experience</strong>
               </h2>
 
               <ion-icon name="chevron-forward-outline"></ion-icon>
@@ -185,7 +185,7 @@
               </div>
 
               <h2 class="h2 card-title">
-                7+ <strong>Completed Projects</strong>
+                9+ <strong>Completed Projects</strong>
               </h2>
 
               <ion-icon name="chevron-forward-outline"></ion-icon>
@@ -201,7 +201,7 @@
               </div>
 
               <h2 class="h2 card-title">
-                99%+ <strong>Happy Clients</strong>
+                99.9+ <strong>Clintes Satisfaction</strong>
               </h2>
 
               <ion-icon name="chevron-forward-outline"></ion-icon>
